# pyremotedata

./: .buildinfo  .gitignore  LICENSE  README.md  bump_version.py  erda.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  sitemap.xml  tmp.py  usage.html
.github/workflows/: python-tests.yml  rebuild-and-publish.yml  test-workflow.yml
_modules/: index.html
_modules/pyremotedata/: config.html  implicit_mount.html
_sources/: erda.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  usage.rst.txt
_sources/api/: config.rst.txt  implicit_mount.rst.txt
_static/: custom.css  documentation_options.js
api/: config.html  implicit_mount.html
docs/: IOHandler.rst  README.md  RemotePathDataset.rst  RemotePathIterator.rst  conf.py  dataloader.rst  implicit_mount.rst  index.html  installation.rst
docs/_build/doctrees/: IOHandler.doctree  ImplicitMount.doctree  RemotePathIterator.doctree  config.doctree  dataloader.doctree  environment.pickle  implicit_mount.doctree  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  IOHandler.html  ImplicitMount.html  RemotePathDataLoader.html  RemotePathDataset.html  RemotePathIterator.html  config.html  dataloader.html  genindex.html  implicit_mount.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pyremotedata/: config.html  dataloader.html  implicit_mount.html
docs/_build/html/_sources/: ImplicitMount.rst.txt  RemotePathDataLoader.rst.txt  RemotePathDataset.rst.txt  config.rst.txt  index.rst.txt
docs/_static/: custom.css
docs/api/: config.rst  implicit_mount.rst
perf/: compare_ls_find.py  round_trip.py  upload_download.py
src/pyremotedata/: __init__.py  config.py  dataloader.py  implicit_mount.py  pyremotedata_config.yaml
src/remote_data/: __init__.py  config.py  dataloader.py  implicit_mount.py
tests/: README  test_config.py  test_transfer.py
