[build-system]
requires = [
  "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
packages = [
    { include="remote_data", from="src" },
]

[project]
name = "pyRemoteData"
version = "0.0.8"
authors = [
  { name="Asger Svenning", email="asgersvenning@gmail.com" },
]
description = "A package for low- and high-level high-bandwidth asynchronous data transfer"
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "PyYAML"
]

[project.optional-dependencies]
full = [
  "h5py",
  "torch",
  "torchvision"
]

[project.urls]
"Homepage" = "https://github.com/asgersvenning/pyremotedata"
"Bug Tracker" = "https://github.com/asgersvenning/pyremotedata/issues"