[build-system]
requires = [
  "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
packages = [
    { include="pyremotedata", from="src" },
]

[project]
name = "pyremotedata"
version = "0.0.36"
authors = [
  { name="Asger Svenning", email="asgersvenning@gmail.com" },
]
description = "A package for low- and high-level high-bandwidth asynchronous data transfer"
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
full = [
  "wrapt_timeout_decorator>=1.5.1",
  "colorlog>=6.9.0",
  "torch>=2.0.1",
  "torchvision>=0.15.2"
]

[project.urls]
"Homepage" = "https://github.com/asgersvenning/pyremotedata"
"Bug Tracker" = "https://github.com/asgersvenning/pyremotedata/issues"