[project]
name = "pyremotedata"
version = "0.1.12"
authors = [
  { name="Asger Svenning", email="asgersvenning@gmail.com" },
]
description = "A package for low- and high-level high-bandwidth asynchronous data transfer"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
  "PyYAML>=6.0.1",
  "tqdm>=4.67.1"
]

[project.optional-dependencies]
full = [
  "wrapt_timeout_decorator>=1.5.1",
  "colorlog>=6.9.0"
]

[project.urls]
"Homepage" = "https://github.com/asgersvenning/pyremotedata"
"Repository" = "https://github.com/asgersvenning/pyremotedata"
"Issues" = "https://github.com/asgersvenning/pyremotedata/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, UP: pyupgrade, I: isort
select = ["E", "F", "UP", "I"]

[build-system]
requires = [
  "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
packages = [
    { include="pyremotedata", from="src" },
]